--- a/CFCA.html
+++ b/CFCA.html
@@ -45,9 +45,9 @@
     </div>
 
     <div class="content">
-        <a href="gerar-lista.html" target="_blank">1 - Gerar Lista de credores</a>
-        <a href="esocial-exporta.html" target="_blank">2 - eSocial - Exporta Dados</a>
-        <a href="esocial-importa.html" target="_blank">3 - eSocial - Importa Dados</a>
+        <a href="Gera Lista de Credores.html" target="_blank">1 - Gerar Lista de credores</a>
+        <a href="eSocial Exporta Dados-Versão 7.html" target="_blank">2 - eSocial - Exporta Dados</a>
+        <a href="eSocial Importa Dados-V10.html" target="_blank">3 - eSocial - Importa Dados</a>
     </div>
 </body>
 </html>
