--- a/CFCA.html
+++ b/CFCA.html
@@ -48,6 +48,8 @@
         <a href="gerar-lista.html" target="_blank">1 - Gerar Lista de credores</a>
         <a href="esocial-exporta.html" target="_blank">2 - eSocial - Exporta Dados</a>
         <a href="esocial-importa.html" target="_blank">3 - eSocial - Importa Dados</a>
+        <a href="DadoseSocial.html" target="_blank">4 - Lançar dados mensais para o eSocial</a>
+
     </div>
 </body>
 </html>
