--- a/CFCA.html
+++ b/CFCA.html
@@ -49,7 +49,7 @@
         <a href="esocial-exporta.html" target="_blank">2 - eSocial - Exporta Dados</a>
         <a href="esocial-importa.html" target="_blank">3 - eSocial - Importa Dados</a>
         <a href="DadoseSocial.html" target="_blank">4 - Lançar dados mensais para o eSocial</a>
-        <a href="https://www.gov.br/esocial/pt-br/empresas/consulta-qualificacao-cadastral" target="_blank">5 - Pesquisa Qualidifação Cadastral eSocial (link)</a>
+        <a href="https://www.gov.br/esocial/pt-br/empresas/consulta-qualificacao-cadastral" target="_blank">5 - Pesquisa Qualificação Cadastral eSocial (link)</a>
         <a href="https://drive.google.com/drive/folders/1-AzU0pDLDjg3yfKtmLpelcqAZ4-9OOkt?usp=drive_link" target="_blank">6 - Pasta com documentos e orientações para o eSocial (link)</a>
     </div>
 </body>
