--- a/alerta.html
+++ b/alerta.html
@@ -75,7 +75,7 @@
     </div>
 
     <audio id="somAlerta" loop>
-        <source src="https://noproblo.dayjo.org/ZeldaSounds/WW/WW_Fanfare_SmallItem.wav" type="audio/wav">
+        <source src="https://jrod2025.github.io/aplicativos-ifmg/Alerta.mp3" type="audio/mp3">
     </audio>
 
     <script>
@@ -99,4 +99,5 @@
         </div>
     </script>
 </body>
+
 </html>
